# nepwork-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GDAL.txt  GIT&GITHUB.MD  README.md  mypy.ini  pyproject.toml  ruff.toml
apps/chat/: consumers.py  middleware.py  permission.py  routing.py  serializers.py  services.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_chat_type_and_direct_pair_key.py  0003_backfill_chat_type_and_direct_pair_key.py
apps/chat/models/: chat.py  message.py
apps/jobs/: admin.py  permissions.py  tasks.py  urls.py  views.py
apps/jobs/migrations/: 0001_initial.py  0002_initial.py  0003_remove_job_skills_required_job_skills_required.py  0004_alter_job_location.py  0005_jobsaved.py  0006_jobcategory_color.py  0007_jobapplication_unique_active_job_application_per_applicant.py
apps/jobs/models/: __init__.py  job_application.py  job_category.py  job_saved.py  jobs.py
apps/jobs/selectors/: application.py  job.py
apps/locations/: serializer.py  serializers.py  services.py  urls.py  views.py
apps/notifications/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/recommendations/: tasks.py
apps/services/: admin.py  permissions.py  urls.py
apps/skill/: apps.py  models.py  serializer.py  services.py  urls.py  views.py
apps/user_activity/: admin.py  apps.py  constants.py  mixins.py  models.py  services.py  tasks.py
apps/users/: admin.py  permissions.py  schemas.py  serializersold.py  services.py  tasks.py  urls.py  views.py
apps/utils/: json_loader.py  pagination.py  serializers.py  users_utils.py
apps/websockets/: consumer.py  presence.py  router.py
config/: asgi.py  celery.py  settings.py  urls.py
templates/emails/: application_status_update.html  base.html  verify_email.html
(+105 files in other folders)
