[project]
name = "nepwork-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.4.0",
    "celery[redis]>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.2",
    "django>=6.0.5",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-scalar>=0.2.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-auth>=2.55.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "requests>=2.34.2",
    "tinycss2>=1.5.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
    "django-stubs>=6.0.5",
    "djangorestframework-stubs>=3.17.0",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "faker>=40.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
]
